creo alignCenter css rule, fixo header, button-->a

--- a/css/debug.css
+++ b/css/debug.css
@@ -5,7 +5,7 @@
 
 /*header*/
 header {
-    height: 80px;
+    /* height: 80px; */
     background-color: red;
     border: 1px solid yellow;
 }
