--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
     justify-content: space-between;
 }
 
+.alignCenter{
+    align-items: center;
+}
+
 .wrap{
     flex-wrap: wrap;
 }
